--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
   },
   "dependencies": {
     "@kinde-oss/kinde-auth-nextjs": "^2.9.2",
+    "@mantine/tiptap": "^8.3.5",
     "@prisma/client": "^6.17.1",
+    "@tiptap/react": "^3.9.0",
+    "@tiptap/starter-kit": "^3.9.0",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "cookie": "^1.0.2",
+    "dompurify": "^3.3.0",
     "framer-motion": "^12.23.24",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.545.0",
